# carPlateDetector

./: .pre-commit-config.yaml  README.md  char_images.npy  datasets.yaml  jpnotebook.ipynb  main.py  pyproject.toml  run.ipynb  use.py  yolo_detect.py  yolo_train.py
.ipynb_checkpoints/: jpnotebook-checkpoint.ipynb
car-plate-detector/cnn/: main.py  validation_metrics.csv
car-plate-detector/cnn/model/: license_plate_model_weights.pt
car-plate-detector/yolo/: yolo_detect.py  yolo_train.py
car-plate-detector/yolo/datasets/cars_license_plate_new/train/: labels.cache
car-plate-detector/yolo/runs/detect/train8/: events.out.tfevents.1719871982.DESKTOP-NGMOVEH.16916.0
carPlateDetector/cnn/: main.py  run.py
carPlateDetector/yolo/: yolo_train.py
carPlateDetector/yolo/datasets/cars_license_plate_new/train/: labels.cache
carPlateDetector/yolo/datasets/cars_license_plate_new/val/: labels.cache
carPlateDetector/yolo/runs/detect/train/: args.yaml
carPlateDetector/yolo/runs/detect/train12/: args.yaml
carPlateDetector/yolo/runs/detect/train2/: args.yaml
carPlateDetector/yolo/runs/detect/train22/: args.yaml
carPlateDetector/yolo/runs/detect/train25/: args.yaml
carPlateDetector/yolo/runs/detect/train3/: args.yaml
datasets/cars_license_plate_new/val/: labels.cache
results/cnn_results/: training_metrics.csv
results/yolo_results/yolo/: yolo_train.py
runs/detect/train12/: results.csv
runs/detect/train16/: args.yaml
runs/detect/train4/: results.csv
runs/detect/train5/: events.out.tfevents.1719870881.DESKTOP-NGMOVEH.5568.0
runs/detect/train6/: args.yaml
(+53 files in other folders)
