[tool.poetry]
name = "platedetector"
version = "0.1.0"
description = ""
authors = ["Damian Maluga <s24272@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.2.46"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
tensorflow = "^2.16.2"
opencv-python = "^4.10.0.84"
keras = "^3.4.1"
scikit-learn = "^1.5.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"